[project]
name = "g-pcgrl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.2.2",
    "networkx>=3.4.2",
    "matplotlib>=3.10.0",
    "stable-baselines3>=2.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/g_pcgrl"]
